[gd_scene load_steps=5 format=3 uid="uid://bct4c58g14yqa"]

[ext_resource type="Script" uid="uid://cy8mwlux2rpy1" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://cihgw5ts6mp1u" path="res://sprites/ui/body.png" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://c3e327e5hafnd" path="res://sprites/ui/cage.png" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://drjl3ejflvq5q" path="res://sprites/ui/options.png" id="4_1bvp3"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="ScreenBackground" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.25300002
anchor_top = 0.289
anchor_right = 0.25300002
anchor_bottom = 0.289
offset_left = -1.4560242
offset_top = -0.27200317
offset_right = 267.54398
offset_bottom = 268.728

[node name="Digivice" type="TextureRect" parent="."]
modulate = Color(0.5803922, 0.21960784, 0.18039216, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.94446
offset_top = -280.0
offset_right = 386.94446
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_h2yge")
expand_mode = 3
stretch_mode = 4

[node name="Cage" type="TextureRect" parent="."]
modulate = Color(0.5019608, 0.5019608, 0.5019608, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.94446
offset_top = -280.0
offset_right = 386.94446
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_1bvp3")
expand_mode = 3
stretch_mode = 4

[node name="Control" type="Control" parent="Cage"]
layout_mode = 1
anchor_left = 0.84200007
anchor_top = 0.202
anchor_right = 0.84200007
anchor_bottom = 0.202
offset_left = 0.32995605
offset_top = -0.12000275
offset_right = 63.329956
offset_bottom = 329.88

[node name="A" type="TextureButton" parent="Cage/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.5
offset_right = 28.5
offset_bottom = 62.0
grow_horizontal = 2

[node name="B" type="TextureButton" parent="Cage/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -31.0
offset_right = 29.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="C" type="TextureButton" parent="Cage/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.5
offset_top = -62.0
offset_right = 29.5
grow_horizontal = 2
grow_vertical = 0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 4.0000005
offset_right = 16.0
offset_bottom = 44.0
grow_horizontal = 0
scale = Vector2(0.525, 0.525)

[node name="OptionsButton" type="TextureButton" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
texture_normal = ExtResource("4_1bvp3")

[node name="Options" type="PanelContainer" parent="UI/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -820.9524
offset_top = 3.8095233
offset_right = -641.9524
offset_bottom = 161.80952
grow_horizontal = 0
scale = Vector2(4.510236, 4.510236)
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="BodyColor" type="HBoxContainer" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/Options/VBoxContainer/BodyColor"]
layout_mode = 2
text = "Body Color"

[node name="Control" type="Control" parent="UI/Control/Options/VBoxContainer/BodyColor"]
layout_mode = 2

[node name="BodyColorPicker" type="ColorPickerButton" parent="UI/Control/Options/VBoxContainer/BodyColor/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -11.5
offset_right = 72.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2.9199998, 1)

[node name="CageColor" type="HBoxContainer" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/Options/VBoxContainer/CageColor"]
layout_mode = 2
text = "Cage Color"

[node name="Control" type="Control" parent="UI/Control/Options/VBoxContainer/CageColor"]
layout_mode = 2

[node name="CageColorPicker" type="ColorPickerButton" parent="UI/Control/Options/VBoxContainer/CageColor/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -11.5
offset_right = 74.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2.9199998, 1)

[node name="BackgroundColor" type="HBoxContainer" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/Options/VBoxContainer/BackgroundColor"]
layout_mode = 2
text = "Background Color"

[node name="Control" type="Control" parent="UI/Control/Options/VBoxContainer/BackgroundColor"]
layout_mode = 2

[node name="BackgroundColorPicker" type="ColorPickerButton" parent="UI/Control/Options/VBoxContainer/BackgroundColor/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 18.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2.9199998, 1)

[node name="CycleScreenBackground" type="Button" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2
text = "Cycle Screen
Background"

[node name="Button" type="Button" parent="UI/Control/Options/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Cage/Control/A" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Cage/Control/B" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Cage/Control/C" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Control/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="color_changed" from="UI/Control/Options/VBoxContainer/BodyColor/Control/BodyColorPicker" to="." method="_on_body_color_changed"]
[connection signal="color_changed" from="UI/Control/Options/VBoxContainer/CageColor/Control/CageColorPicker" to="." method="_on_cage_color_changed"]
[connection signal="color_changed" from="UI/Control/Options/VBoxContainer/BackgroundColor/Control/BackgroundColorPicker" to="." method="_on_background_color_changed"]
[connection signal="pressed" from="UI/Control/Options/VBoxContainer/CycleScreenBackground" to="." method="_on_cycle_screen_background_pressed"]
[connection signal="pressed" from="UI/Control/Options/VBoxContainer/Button" to="." method="_on_close_button_pressed"]
